<resources>
    <string name="app_name">吉农保</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_insure">快速承保</string>
    <string name="search_confirm">勘查定损</string>
    <string name="info_collect">信息采集</string>
    <string name="search_hint">快速录入信息，查询信息列表</string>
    <string name="input_tel_id">请输入手机号码/信息ID/证件号码</string>
    <string name="info_entry">信息录入</string>
    <string name="all_info">全部信息</string>
    <string name="all_info_detail">浏览信息列表</string>
    <string name="map_info">地图信息</string>
    <string name="map_info_detail">查询地块信息</string>
    <string name="mission_todo">待处理任务</string>
    <string name="direct_insurance">直接承保</string>
    <string name="direct_insurance_detail">直接填写信息，绘制承保区域</string>
    <string name="continue_accept_insurance">继续承保</string>
    <string name="continue_accept_insurance_detail">利用已有信息，补充部分信息</string>
    <string name="choose_area">选择区域</string>
    <string name="reset">重选</string>
    <string name="done">完成</string>
    <string name="mu">亩</string>
    <string name="my_app">我的应用</string>
    <string name="see_all">查看全部</string>
    <string name="info_collect_detail">基础地块信息采集</string>
    <string name="quick_insure_detail">承保基本信息录入</string>
    <string name="property_owner">权属人</string>
    <string name="credit_info">证件信息</string>
    <string name="dirt_position">地块位置</string>
    <string name="mark_dirt">标记地块</string>
    <string name="id_kind">证件类型</string>
    <string name="id_num">身份证</string>
    <string name="organize_id">组织机构代码</string>
    <string name="social_id">统一社会信用代码</string>
    <string name="other">其他</string>
    <string name="id_number">证件号码</string>
    <string name="input_id">请输入证件号码</string>
    <string name="ocr">拍照识别证件号码</string>
    <string name="select_province">选择省</string>
    <string name="select_city">选择市</string>
    <string name="select_xian">选择县</string>
    <string name="select_xiangzhen">选择乡镇</string>
    <string name="select_cun">选择村</string>
    <string name="plant_location">种植地点</string>
    <string name="input_plant_location">请输入种植地点</string>
    <string name="credit_id">身份证号</string>
    <string name="tel">手机号码</string>
    <string name="assist_search">辅助查勘</string>
    <string name="assist_search_detail">辅助查勘方便定损</string>
    <string name="insure_info">保险信息</string>
    <string name="survey_hint">快速查看保单，辅助查勘定损</string>
    <string name="next_step">下一步</string>
    <string name="test_success">新密码修改成功</string>
    <string name="test_phonenumber_success">手机号验证成功</string>
    <string name="test_login_success">登录成功</string>
    <string name="recognizee">被保人</string>
    <string name="recognizee_credit_id">被保人身份证号</string>
    <string name="bank_account">银行账号</string>
    <string name="phone_number">电话号码</string>
    <string name="test_recognizee">吴广才</string>
    <string name="test_recognizee_credit_id">220104198744512341</string>
    <string name="test_bank_account">223819381739173</string>
    <string name="test_phone_number">13745318977</string>
    <string name="checked">已查勘</string>
    <string name="unchecked">未查勘</string>
</resources>
