<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="132dp"
    android:elevation="2dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:id="@+id/mNumberTV"
            android:textColor="#5C5C5C"
            android:text="NO>FSDFSDFSDF"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="23dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5C5C5C"
            android:textSize="10dp"
            android:text="@string/property_owner"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="23dp" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5C5C5C"
            android:textSize="10dp"
            android:text="@string/credit_id"
            android:layout_marginTop="74dp"
            android:layout_marginLeft="23dp" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5C5C5C"
            android:textSize="10dp"
            android:text="@string/tel"
            android:layout_marginTop="94dp"
            android:layout_marginLeft="23dp" />


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ABABAB"
            android:textSize="10dp"
            android:text="@string/property_owner"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="113dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ABABAB"
            android:textSize="10dp"
            android:text="@string/property_owner"
            android:layout_marginTop="74dp"
            android:layout_marginLeft="113dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ABABAB"
            android:textSize="10dp"
            android:text="@string/property_owner"
            android:layout_marginTop="94dp"
            android:layout_marginLeft="113dp" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="-2dp"
            android:background="@drawable/img_item_all_info"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>